fix(public): constrain overflow overlay to final preview tile

--- a/sites/public/src/components/listing/listing_sections/ListingImageGrid.module.scss
+++ b/sites/public/src/components/listing/listing_sections/ListingImageGrid.module.scss
@@ -132,15 +132,13 @@
 .image-grid__more {
     font-weight: bold;
     grid-area: Secondary-2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
     color: #fff;
     background: rgba(0, 0, 0, 0.6);
     cursor: pointer;
